--- a/Homework 52 - Equality Constraints with Lagrange Multipliers.ipynb
+++ b/Homework 52 - Equality Constraints with Lagrange Multipliers.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "CS164PW52.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO23V8dfRDkvIDAKsk3dqzG"
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMWC3s4dclWhg80r+Q8NYmd"
     },
     "kernelspec": {
       "name": "python3",
@@ -47,7 +48,7 @@
         "\\mathcal{L}_\\lambda(x,y,\\lambda)\n",
         "\\end{bmatrix} = \\begin{bmatrix}\n",
         "2x-2\\lambda x\\\\\n",
-        "4y -2\\lambda y\\\\\n",
+        "4y -4 -2\\lambda y\\\\\n",
         "x^2+y^2-9\n",
         "\\end{bmatrix} = \\begin{bmatrix}\n",
         "0\\\\\n",
@@ -55,7 +56,7 @@
         "0\n",
         "\\end{bmatrix}$$\n",
         "\n",
-        "which we then solve to yield four solutions: $(x^*,y^*,\\lambda^*)=(\\pm 3, 0, 1),(0,\\pm 3, 2)$. Plugging them into the cost function, we can classify the critical points we found: $f(\\pm 3,0) = 9, f(0,3) = 6, f(0,-3) = 30$. Therefore,subject to the constraint, the global maximum is 30 at $(0,-3)$, and the global minimum is 6 at $(0,3)$."
+        "which we then solve to yield four solutions: $(x^*,y^*,\\lambda^*)=(\\pm \\sqrt{5}, 2, 1),(0, 3, 4/3),(0,-3,8/3)$. Plugging them into the cost function, we can classify the critical points we found: $f(\\pm \\sqrt{5},0) = 5, f(0,3) = 6, f(0,-3) = 30$. Therefore,subject to the constraint, the global maximum is 30 at $(0,-3)$, and the global minimua are 5 at $(\\pm \\sqrt{5},3)$."
       ]
     },
     {
@@ -73,8 +74,7 @@
         "\n",
         "_Given the form of the cost function, we can be sure that the maximum will occur when the labor and capital expenses are exactly at their maximum total value._\n",
         "\n",
-        "We formulate the constraint as $200x+250y=50,000 \\rightarrow 4x+5y=1000 \\rightarrow y=-\n",
-        "\\frac{4}{5}x+200$"
+        "We formulate the constraint as $200x+250y=50,000 \\rightarrow y=-\\frac{4}{5}x+200$"
       ]
     },
     {
@@ -148,7 +148,7 @@
         "plt.ylim(0,300)\n",
         "plt.show()"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -176,23 +176,23 @@
         "\n",
         "As in problem (1), we define the Lagrangian using the cost and constraint functions from the problem introduction and set its gradient to zero to obtain a system of equations:\n",
         "\n",
-        "$$\\mathcal{L} = f(x,y)-\\lambda (g(x,y)-c) = 100x^{3/4}y^{1/4} - \\lambda(4x+5y-1000)$$\n",
+        "$$\\mathcal{L} = f(x,y)-\\lambda (g(x,y)-c) = 100x^{3/4}y^{1/4} - \\lambda(200x+250y-5000)$$\n",
         "\n",
         "$$\\nabla \\mathcal{L} = \\begin{bmatrix}\n",
         "\\mathcal{L}_x(x,y,\\lambda)\\\\ \n",
         "\\mathcal{L}_y(x,y,\\lambda)\\\\\n",
         "\\mathcal{L}_\\lambda(x,y,\\lambda)\n",
         "\\end{bmatrix} = \\begin{bmatrix}\n",
-        "75x^{-1/4}y^{1/4}-4\\lambda\\\\\n",
-        "25x^{3/4}y^{-3/4} -5\\lambda\\\\\n",
-        "4x+5y-1000\n",
+        "75x^{-1/4}y^{1/4}-200\\lambda\\\\\n",
+        "25x^{3/4}y^{-3/4} -250\\lambda\\\\\n",
+        "200x+250y-50000\n",
         "\\end{bmatrix} = \\begin{bmatrix}\n",
         "0\\\\\n",
         "0\\\\\n",
         "0\n",
         "\\end{bmatrix}$$\n",
         "\n",
-        "which we solve to find a single solution: $(x^*,y^*,\\lambda^*)=(187.5, 50, \\frac{5\\times 15^{3/4}}{2\\sqrt{2}})$, which is a maximum based on our assumption in the problem introduction. We plot the solultion above. \n",
+        "which we solve to find a single solution: $(x^*,y^*,\\lambda^*)=(187.5, 50, \\frac{3^{3/4}}{4 \\sqrt{2} 5^{1/4}})$, which is a maximum based on our assumption in the problem introduction. We plot the solultion above. \n",
         "\n",
         "We find the maximum production by plugging $x$ and $y$ into the cost function: $f(187.5,50) = \\$13,473.9$. (Assuming production is measured in dollar revenue)."
       ]
@@ -206,19 +206,23 @@
       "source": [
         "**(c)** _Use the Lagrange Multipliers to estimate the increase in maximum production if we allowed the total expense threshold to increase to \\\\$51,000._\n",
         "\n",
-        "We know that the Lagrange multiplier we calculated, $\\lambda^* = \\frac{5\\times 15^{3/4}}{2\\sqrt{2}}$, is the derivative of the maximum point at the solution with respect to the constraint: $\\frac{dM^*(c)}{dc}=\\lambda^*(c)$.\n",
+        "We know that the Lagrange multiplier we calculated, $\\lambda^* = \\frac{3^{3/4}}{4 \\sqrt{2} 5^{1/4}}$, is the derivative of the maximum point at the solution with respect to the constraint: $\\frac{dM^*(c)}{dc}=\\lambda^*(c)$.\n",
         "\n",
         "Using this knowledge, and assuming a linear relationship between $M^*$ and $c$, we can use the linear formula to find the revenue with a budget constraint of \\\\$51,000:\n",
         "\n",
         "$$M^*(c) = \\lambda^* c +C$$\n",
         "\n",
-        "We can find the intersection $C$ by using the point at $(x^*,y^*,50000)$:\n",
+        "We expect the intersection $C$ to be zero (no labor or capital, no revenue, from the cost function), but we can verify it by using the point at $(x^*,y^*,50000)$:\n",
         "\n",
-        "$$C = 13473.9-\\frac{5\\times 15^{3/4}}{2\\sqrt{2}}*50000 \\approx -660221.3$$\n",
+        "$$C = 13473.9-\\frac{3^{3/4}}{4 \\sqrt{2} 5^{1/4}}*50000 \\approx 0$$\n",
         "\n",
         "And therefore the maximum revenue with budget \\\\$51,000 is:\n",
         "\n",
-        "$$M^*(51000) = \\frac{5\\times 15^{3/4}}{2\\sqrt{2}} * 51000 -660221.3 \\approx \\\\$26947.8$$."
+        "$$M^*(51000) = \\frac{3^{3/4}}{4 \\sqrt{2} 5^{1/4}} * 51000 \\approx \\\\$13743.9$$.\n",
+        "\n",
+        "$$\\Delta M^* = M^*(51,000)-M^*(50,000) \\approx \\$269.48$$\n",
+        "\n",
+        "Which might not be worth the investment."
       ]
     }
   ]
