--- a/Assignment 1 - Unconstrained and Equality Constrained Optimization.ipynb
+++ b/Assignment 1 - Unconstrained and Equality Constrained Optimization.ipynb
@@ -6,7 +6,7 @@
       "name": "CS164 Assignment 1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPEQxKjHwXtvt6H9UBNHOjC"
+      "authorship_tag": "ABX9TyMxyWyrkduFEcXgr8tcdMkW"
     },
     "kernelspec": {
       "name": "python3",
@@ -72,7 +72,7 @@
         "\n",
         "Using the formula of the area of a triangle and the area of a square, summed to compose the right angled trapeze, using the basic trigonometric identities and using WolframAlpha for derivatives:\n",
         "\n",
-        "$$\\begin{align} A &= h(b+c/2) \\\\\n",
+        "$$\\begin{align*} A &= h(b+c/2) \\\\\n",
         "h &= a\\sin{\\theta} \\\\\n",
         "b &= 3-a-h \\\\\n",
         "&= 3-a(1+\\sin{\\theta}) \\\\\n",
@@ -80,7 +80,7 @@
         "A &= a\\sin{\\theta}(3-a(1+\\sin{\\theta})+\\frac{acos{\\theta}}{2}) \\\\\n",
         "A_a &= \\sin{\\theta}(-2a\\sin{\\theta}+a\\cos{\\theta}-2a+3) \\\\\n",
         "A_\\theta &= \\frac{a}{2}(-a\\sin^2{\\theta}+a\\cos^2{\\theta}-2\\cos{\\theta}(2a\\sin{\\theta}+a-3)) \\\\\n",
-        "\\end{align}$$\n",
+        "\\end{align*}$$\n",
         "\n",
         "2D and 3D plots available below, in the code section.\n",
         "\n",
@@ -139,14 +139,14 @@
         "\n",
         "First we define the reward function, constraint function and Lagrangian:\n",
         "\n",
-        "$$\\begin{align} \\\\\n",
+        "$$\\begin{align*} \\\\\n",
         "f(a, b, \\theta) &= h(b+c/2) \\\\\n",
         "&= a\\sin{\\theta}(b+\\frac{acos{\\theta}}{2}) \\\\\n",
         "g(a, b, \\theta) &= a+b+h = W = 3\\\\\n",
         "&= a+b+a\\sin{\\theta} \\\\\n",
         "\\mathcal{L}(a, b, \\theta, \\lambda) &= f(\\mathbf{x})-\\lambda(g(\\mathbf{x})-W) \\\\\n",
         "&= ab\\sin{\\theta}+\\frac{a^2\\sin{\\theta}\\cos{\\theta}}{2} -\\lambda(a+b+a\\sin{\\theta}-3) \n",
-        "\\end{align}$$\n",
+        "\\end{align*}$$\n",
         "\n",
         "By enforcing that $\\nabla \\mathcal{L} = \\mathbf{0}$, we get a system of linear equation that allows us to solve for the point where the gradients of both functions are parallel:\n",
         "\n",
@@ -181,7 +181,7 @@
       "source": [
         "We can confirm that this critical point is indeed a maximum of the reward function by using the bordered Hessian second order test. We compose the bordered Hessian, and plug in the solution:\n",
         "\n",
-        "$$\\begin{align} H(\\mathcal{L}) &= \\begin{bmatrix}\n",
+        "$$\\begin{align*} H(\\mathcal{L}) &= \\begin{bmatrix}\n",
         "0 & \\nabla g^T\\\\ \n",
         "\\nabla g &  H(f)\n",
         "\\end{bmatrix} = \\begin{bmatrix}\n",
@@ -202,7 +202,7 @@
         "1 & \\sin{\\frac{\\pi}{3}} & 0 & 2\\sqrt{3}\\\\\n",
         "2\\sqrt{3} & \\frac{3+\\sqrt{3}}{2} & 2\\sqrt{3} & -16-\\sin{\\frac{\\pi}{3}}(12+6\\sqrt{3})\\\\\n",
         "\\end{bmatrix}\n",
-        "\\end{align}$$\n",
+        "\\end{align*}$$\n",
         "\n",
         "Using WolframAlpha for differentiation. We now need to examine the signs of leading principal minors of the bordered Hessian, being the determinants of submatrices along the diagonal which contain the top-left element. However, we skip the first two submatrices in this single-constraint case since it does not include enough information about the problem to be useful in identifying the critical point. For the third and fourth minors, we find $\\det H^3(\\mathcal{L}^*)\\approx 2.8$ and $\\det H^34(\\mathcal{L}^*)\\approx -115$. These alternating signs confirm beyond a doubt that the critical point is indeed a maximum of the reward function representing the Area."
       ]
