Update Assignment 1 - Unconstrained and Equality Constrained Optimization.ipynb

--- a/Assignment 1 - Unconstrained and Equality Constrained Optimization.ipynb
+++ b/Assignment 1 - Unconstrained and Equality Constrained Optimization.ipynb
@@ -26,7 +26,8 @@
         "##Unconstrained & Equality Constrained Optimization\n",
         "_Yoav Rabinovich, Feb 2020_\n",
         "\n",
-        "------------------------------"
+        "------------------------------\n",
+        "Link to nbviewer: https://nbviewer.jupyter.org/github/Shesh6/CS164--Optimization-Methods/blob/master/Assignment%201%20-%20Unconstrained%20and%20Equality%20Constrained%20Optimization.ipynb"
       ]
     },
     {
