Update Homework 81 - Separating and Supporting Hyperplanes.ipynb

--- a/Homework 81 - Separating and Supporting Hyperplanes.ipynb
+++ b/Homework 81 - Separating and Supporting Hyperplanes.ipynb
@@ -47,7 +47,7 @@
         "\n",
         "And since $f(u)$ is negative and distances are positive, we have that $(d-c)^T(u-d) < 0$\n",
         "\n",
-        "However, let's take a point interpolated between $d$ and $u$, $d+t(u-d)$, and examine its distance to $c$. The expression above happens to be proportional to the derivative, when evaluated at $t=0$ of that distance function $||d+t(u-d)-c||^2_2$. Since it's derivative at $t=0$ is negative, if we nudge $t$ to a small positive value, the distance is lowered and the point is closer to $c$ than $d$ is. The problem is that we've defined $d$ to be the closest point to $c$ in $D$, and since $D$ is convex and contains both $d$ and $u$, then any point on a line segment between them is also in $D$, so we have a contradiction."
+        "However, let's take a point interpolated between $d$ and $u$, $tu+d(1-t)=d+t(u-d)$, and examine its distance to $c$. The expression above happens to be proportional to the derivative, when evaluated at $t=0$ of that distance function $||d+t(u-d)-c||^2_2$. Since it's derivative at $t=0$ is negative, if we nudge $t$ to a small positive value, the distance is lowered and the point is closer to $c$ than $d$ is. The problem is that we've defined $d$ to be the closest point to $c$ in $D$, and since $D$ is convex and contains both $d$ and $u$, then any point on a line segment between them is also in $D$, so we have a contradiction."
       ]
     },
     {
