--- a/Homework 82 - KKT Conditions and Inequality Constrained Optimization.ipynb
+++ b/Homework 82 - KKT Conditions and Inequality Constrained Optimization.ipynb
@@ -60,7 +60,7 @@
         "\n",
         "$$\\begin{align*}\n",
         "&\\nabla_\\mathbf{x} f(\\mathbf{x})  + \\underset{i=1}{\\overset{m}{\\sum}}  \\lambda_i\\nabla_\\mathbf{x} h_i(\\mathbf{x}) + \\underset{i=1}{\\overset{n}{\\sum}} \\mu_i \\nabla_\\mathbf{x} g_i(\\mathbf{x}) \\\\\n",
-        "= &\\frac{\\mathbf{x}^T Q}{2}-\\mathbf{r} + \\boldsymbol{\\lambda}^T C + \\boldsymbol{\\mu}^T A = \\mathbf{0}\\\\\n",
+        "= &\\frac{\\mathbf{x}^T Q}{2}+\\mathbf{r} + \\boldsymbol{\\lambda}^T C + \\boldsymbol{\\mu}^T A = \\mathbf{0}\\\\\n",
         "\\end{align*}$$\n",
         "\n",
         "- Equality constraints:\n",
