--- a/Homework 92 - Linear Programming using CVX.ipynb
+++ b/Homework 92 - Linear Programming using CVX.ipynb
@@ -54,7 +54,7 @@
         "-x,-y &\\leq 0\n",
         "\\end{align*}$$\n",
         "\n",
-        "And then we use the CVPY package as seen in the [tutorial](https://www.cvxpy.org/tutorial/intro/index.html) to find the solution: "
+        "And then we use the CVXPY package as seen in the [tutorial](https://www.cvxpy.org/tutorial/intro/index.html) to find the solution: "
       ]
     },
     {
