Update Homework 92 - Linear Programming using CVX.ipynb

--- a/Homework 92 - Linear Programming using CVX.ipynb
+++ b/Homework 92 - Linear Programming using CVX.ipynb
@@ -45,7 +45,7 @@
         "320 hours of labor he can invest. To maximize his profit, how many acres\n",
         "of each should he plant?_\n",
         "\n",
-        "We express the problem as a linear program with four constraints. While this makes a small difference when using CVX, we'll still stick with our best practices and express the maximization problem as the minimization of the negated objective function and the constraints as non-positivity constraints:\n",
+        "We express the problem as a linear program with four constraints. While this makes little difference when using CVX, we'll still stick with our best practices and express the maximization problem as the minimization of the negated objective function and the constraints as non-positivity constraints:\n",
         "\n",
         "$$\\begin{align*}\n",
         "\\min_{x,y} \\ f(x,y) &= -40x-30y\\\\\n",
