Update Assignment 2 - Constrained Optimization & KKT Conditions.ipynb

--- a/Assignment 2 - Constrained Optimization & KKT Conditions.ipynb
+++ b/Assignment 2 - Constrained Optimization & KKT Conditions.ipynb
@@ -36,9 +36,8 @@
         "colab_type": "text"
       },
       "source": [
-        "Link to GitHub:\n",
-        "\n",
-        "Link to NBViewer:"
+        "[Link to GitHub](https://github.com/Shesh6/CS164--Optimization-Methods/blob/master/Assignment%202%20-%20Constrained%20Optimization%20%26%20KKT%20Conditions.ipynb).\n",
+        "[Link to NBViewer](https://nbviewer.jupyter.org/github/Shesh6/CS164--Optimization-Methods/blob/master/Assignment%202%20-%20Constrained%20Optimization%20%26%20KKT%20Conditions.ipynb)."
       ]
     },
     {
